# C3KEngine

./: .gitignore  CODE_OF_CONDUCT.md  INTERACTION.md  LICENSE  README.md
backend/: Cargo.toml  app.development.json  run_all.bat  run_all.sh
backend/gate_way/: Cargo.toml  Dockerfile
backend/gate_way/src/: main.rs
backend/gateway/: Cargo.toml
backend/gateway/src/: main.rs
backend/services/auth-service/: Cargo.toml  Dockerfile
backend/services/auth-service/api/: user.api  user.apit
backend/services/auth-service/src/: lib.rs  main.rs
backend/services/auth-service/src/controllers/: health.rs  mod.rs
backend/services/auth-service/src/controllers/role/: auth_controller.rs  mod.rs  products.rs  queries.rs  role_route_maps.rs  roles.rs  routes.rs  user_product_maps.rs  user_role_maps.rs  users.rs
backend/services/auth-service/src/controllers/roles/: auth_controller.rs  mod.rs  product_controller.rs  role_controller.rs  role_route_map_controller.rs  route_controller.rs  user_controller.rs  user_product_map_controller.rs  user_role_map_controller.rs
backend/services/auth-service/src/controllers/setup/: areas.rs  brand_social_maps.rs  brands.rs  building_brand_maps.rs  building_spaces.rs  buildings.rs  business.rs  cities.rs  countries.rs  floors.rs  ownership_status.rs  socials.rs  space_types.rs  status.rs
backend/services/auth-service/src/interfaces/: mod.rs
backend/services/auth-service/src/models/: mod.rs  response.rs
backend/services/auth-service/src/models/role/: mod.rs  products.rs  queries.rs  role_route_maps.rs  roles.rs  routes.rs  user_product_maps.rs  user_role_maps.rs  users.rs
backend/services/auth-service/src/models/roles/: auth.rs  mod.rs  product.rs  role.rs  role_route_map.rs  route.rs  user.rs  user_product_map.rs  user_role_map.rs
backend/services/auth-service/src/models/setup/: areas.rs  brand_social_maps.rs  brands.rs  building_brand_maps.rs  building_spaces.rs  buildings.rs  business.rs  cities.rs  countries.rs  floors.rs  ownership_status.rs  socials.rs  space_types.rs  status.rs
backend/services/auth-service/src/repositories/role/: auth_repository.rs  mod.rs  products.rs  queries.rs  role_route_maps.rs  roles.rs  routes.rs  user_product_maps.rs  user_role_maps.rs  users.rs
backend/services/auth-service/src/repositories/roles/: auth_repository.rs  mod.rs  product_repository.rs  role_repository.rs  role_route_map_repository.rs  route_repository.rs  user_product_map_repository.rs  user_repository.rs  user_role_map_repository.rs
backend/services/auth-service/src/repositories/setup/: areas.rs  brand_social_maps.rs  brands.rs  building_brand_maps.rs  building_spaces.rs  buildings.rs  business.rs  cities.rs  countries.rs  floors.rs  ownership_status.rs  socials.rs  space_types.rs  status.rs
backend/services/auth-service/src/services/: auth_service.rs  mod.rs  product_service.rs  role_route_map_service.rs  role_service.rs  route_service.rs  user_product_map_service.rs  user_role_map_service.rs  user_service.rs
backend/services/auth-service/src/services/role/: auth_service.rs  mod.rs  products.rs  queries.rs  role_route_maps.rs  roles.rs  routes.rs  user_product_maps.rs  user_role_maps.rs  users.rs
backend/services/auth-service/src/services/setup/: areas.rs  brand_social_maps.rs  brands.rs  building_brand_maps.rs  building_spaces.rs  buildings.rs  business.rs  cities.rs  floors.rs  mod.rs  ownership_status.rs  socials.rs  space_types.rs  status.rs
backend/services/auth-service/src/utilities/: error_display.rs  middleware.rs  mod.rs
backend/services/common/: Cargo.toml  app.development.json
backend/services/common/src/: lib.rs
backend/services/common/src/handler/: mod.rs  redis_handler.rs  service_client.rs
backend/services/common/src/interfaces/: irepository.rs
backend/services/common/src/middleware/: middleware.rs
backend/services/common/src/models/: auth.rs  constants.rs  mod.rs  response.rs
backend/services/common/src/models/config/: app_config.rs  backend_config.rs  data_config.rs  gateway_config.rs  mod.rs  radis_config.rs  services_config.rs  toekn_provider_config.rs
backend/services/common/src/utilities/: mod.rs  security_utils.rs
backend/services/hrms-service/: Cargo.toml  Dockerfile
backend/services/hrms-service/src/: main.rs
backend/services/hrms-service/src/controllers/: health.rs  mod.rs
backend/services/hrms-service/src/controllers/attendance/: attendamce_exclude_employees.rs  attendance_policies.rs  attendance_statuses.rs  employee_shifts.rs  gazetted_holidays.rs  leave_application_approvals.rs  leave_applications.rs  leave_types.rs  overtime_request_approvals.rs  overtime_requests.rs  shifts.rs  short_leave_apporvals.rs  short_leaves.rs
backend/services/hrms-service/src/controllers/setting/: mod.rs  (+10 more)
backend/services/retail-service/: Cargo.toml  Dockerfile  README.md
backend/services/retail-service/src/: lib.rs  main.rs
backend/services/retail-service/src/controllers/: health.rs  mod.rs
backend/services/retail-service/src/repositories/: mod.rs
backend/src/controllers/roles/: auth_controller.rs  route_controller.rs  user_controller.rs
backend/src/interfaces/: irepository.rs  iservice.rs
backend/src/models/: constants.rs
backend/src/models/config/: app_config.rs  ftp_config.rs  mod.rs  radis_config.rs  toekn_provider_config.rs
backend/src/models/roles/: mod.rs  role.rs  user_role_map.rs
backend/src/repositories/roles/: role_repository.rs  role_route_map_repository.rs  route_repository.rs  user_repository.rs  user_role_map_repository.rs
backend/src/services/: auth_service.rs  mod.rs  role_service.rs  route_service.rs  user_role_map_service.rs  user_service.rs
backend/src/utilities/: mod.rs  redis_client.rs
code_generator/: Cargo.toml
code_generator/src/: main.rs
code_generator/src/config/: configuration.rs
code_generator/src/handler/: file_handler.rs  mod.rs  postgresql_handler.rs
code_generator/store/: api_template.jsk3  app.configuration.json  controller_template.sk3  main_template.sk3  model_template.sk3  repository_template.sk3  script.sql  service_template.sk3
(+813 files in other folders)
