[workspace]
members = [
  "services/auth-service", 
  "services/hrms-service",
  "services/retail-service",
  "services/common",
  "gate_way"
  ]
resolver = "2"

[workspace.dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
awc = { version = "3.5.1", features = ["openssl"] }
futures = "0.3.31"
sqlx = { version = "0.8.3", features = [
    "postgres",
    "macros",
    "runtime-tokio",
    "tls-native-tls",
    "uuid",
    "chrono",
] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
jsonwebtoken = "9.3.1"
redis = { version = "0.29.0", default-features = false, features = ["tls"] }
once_cell = "1.20.3"
uuid = { version = "1.14.0", features = ["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
env_logger = "0.11.6"