[package]
name = "c3k-auth-service"
version = "0.1.0"
edition = "2021"
authors = ["H.Muhammad Kamran"]

[[bin]]
name = "c3k-auth-service"
path = "src/main.rs"

[dependencies]
c3k-common = { path = "../common" }
sha2 = "0.10.8"
rand = "0.8.5"
actix-web = { workspace = true }
actix-cors = { workspace = true }
jsonwebtoken = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
