[package]
name = "c3k-common"
version = "0.1.0"
edition = "2021"
authors = ["H.Muhammad Kamran"]

[dependencies]
actix-web = "4.9.0"
awc = { version = "3.5.1", features = ["openssl"] }
futures = "0.3.30"
sqlx = { version = "0.8.1", features = [
    "postgres",
    "macros",
    "runtime-tokio",
    "tls-native-tls",
    "uuid",
    "chrono",
] }
postgres = "0.19.9"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.120"
jsonwebtoken = "9.3"
redis = "0.27.5"
once_cell = "1.20.2"