[package]
name = "c3k-common"
version = "0.1.0"
edition = "2021"
authors = ["H.Muhammad Kamran"]

[dependencies]
actix-web = { workspace = true }
awc = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
redis = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }