[package]
name = "c3k-common"
version = "0.1.0"
edition = "2021"
authors = ["H.Muhammad Kamran"]

[dependencies]
sha2 = "0.10.8"
rand = "0.9.0"
deadpool-redis = {version = "0.19.0", features = ["serde"] }
actix-web = { workspace = true }
awc = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
redis = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
