[package]
name = "c3k-hrms-service"
version = "0.1.0"
edition = "2021"
authors = ["H.Muhammad Kamran"]

[[bin]]
name = "c3k-hrms-service"
path = "src/main.rs"

[dependencies]
c3k-common = { path = "../common" }
actix-web = { workspace = true }
actix-cors = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
